one step behind issue resumed. removing sourcemaps and autoprefix until later

--- a/cw3b/style.css
+++ b/cw3b/style.css
@@ -10,20 +10,19 @@ body {
 }
 
 .wrapper {
-  background: orange;
+  background: purple;
+  background: yellow;
   margin: 0 auto;
-  max-width: 1200px;
+  max-width: 120px;
   padding: 4rem;
   border: solid;
   border-radius: 25px;
 }
 
 header {
-  height: 11px;
+  height: 120px;
 }
 
 header h1 {
   margin-top: 1em;
 }
-
-/*# sourceMappingURL=style.css.map */
